Added icon buttons and dialog stub for batched recipients

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -19,6 +19,7 @@
   "add_message_q": "Добави съобщение?",
   "add_note_to_self_q": "Добави бележка към себе си?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Добавяне на множество получатели от CSV",
   "add_recipient_to_contacts_q": "Добави получателя към контактите?",
   "add_sender_as_contact": "Добави подателя към контактите",
   "add_to_group": "Добави към група",
@@ -774,7 +775,7 @@
   "request_processing_time": "Заявете време за обработка",
   "returning_user_q": "Връщащ се потребител?",
   "reward_recipient": "Награда Получател",
-  "same_out": "Same Amount",
+  "same_out": "Същата сума",
   "scoop_num": "Номер на лъжичка",
   "search_aliases": "Търси псевдоними...",
   "search_assets": "Търси активи...",
