--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -19,6 +19,7 @@
   "add_message_q": "Afegir un missatge?",
   "add_note_to_self_q": "Afegir una nota personal?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Addició de diversos destinataris per CSV",
   "add_recipient_to_contacts_q": "Afegir el destinatari a contactes?",
   "add_sender_as_contact": "Afegeix l'emissor com a Contacte",
   "add_to_group": "Afegir al grup",
@@ -774,7 +775,7 @@
   "request_processing_time": "Temps de processament de sol·licituds",
   "returning_user_q": "Usuari existent?",
   "reward_recipient": "Destinatari de recompensa",
-  "same_out": "Same Amount",
+  "same_out": "Mateixa quantitat",
   "scoop_num": "Número d’escola",
   "search_aliases": "Cercar Àlies...",
   "search_assets": "Cercar Actius...",
