--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -19,6 +19,7 @@
   "add_message_q": "Přidat zprávu?",
   "add_note_to_self_q": "Přidat poznámku do sebe?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Přidání více příjemců pomocí CSV",
   "add_recipient_to_contacts_q": "Přidat příjemce mezi kontakty?",
   "add_sender_as_contact": "Přidat odesílatele jako kontakt",
   "add_to_group": "Přidat do skupiny",
@@ -774,7 +775,7 @@
   "request_processing_time": "Doba zpracování požadavku",
   "returning_user_q": "Stávající uživatel?",
   "reward_recipient": "Příjemce odměny",
-  "same_out": "Same Amount",
+  "same_out": "Stejné množství",
   "scoop_num": "Scoop Number",
   "search_aliases": "Hledat aliasy...",
   "search_assets": "Hledat aktiva...",
