--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -19,6 +19,7 @@
   "add_message_q": "Nachricht hinzufügen?",
   "add_note_to_self_q": "Erinnerung hinzufügen?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Hinzufügen mehrerer Empfänger per CSV",
   "add_recipient_to_contacts_q": "Empfänger zu Kontakten hinzufügen?",
   "add_sender_as_contact": "Absender als Kontakt hinzufügen",
   "add_to_group": "Zur Gruppe hinzufügen",
@@ -774,7 +775,7 @@
   "request_processing_time": "Bearbeitungszeit anfordern",
   "returning_user_q": "Konto bereits vorhanden?",
   "reward_recipient": "Belohnungsempfänger",
-  "same_out": "Same Amount",
+  "same_out": "Gleicher Betrag",
   "scoop_num": "Scoop-Nummer",
   "search_aliases": "Suche Aliasse...",
   "search_assets": "Suche Assets...",
