--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -19,6 +19,7 @@
   "add_message_q": "Προσθήκη μηνύματος;",
   "add_note_to_self_q": "Να προσθέστε τη σημείωση για εσάς;",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Προσθήκη πολλών παραληπτών ανά CSV",
   "add_recipient_to_contacts_q": "Προσθήκη αποδέκτη στις επαφές;",
   "add_sender_as_contact": "Προσθήκη αποστολέα ως επαφή",
   "add_to_group": "Προσθήκη στην ομάδα",
@@ -774,7 +775,7 @@
   "request_processing_time": "Ζήτηση χρόνου επεξεργασίας",
   "returning_user_q": "Επιστροφή χρήστη;",
   "reward_recipient": "Ανταμοιβή παραλήπτη",
-  "same_out": "Same Amount",
+  "same_out": "Ιδιο ποσό",
   "scoop_num": "Αριθμός Scoop",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
