--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -19,6 +19,7 @@
   "add_message_q": "¿Añadir un Mensaje?",
   "add_note_to_self_q": "¿Añadir Nota Personal?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Agregar múltiples destinatarios por CSV",
   "add_recipient_to_contacts_q": "¿Agregar destinatario a contactos?",
   "add_sender_as_contact": "Agregar remitente como contacto",
   "add_to_group": "Añadir a Grupo",
@@ -774,7 +775,7 @@
   "request_processing_time": "Tiempo de procesamiento de solicitud",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Recipiente Recompensa",
-  "same_out": "Same Amount",
+  "same_out": "La misma cantidad",
   "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de Activos...",
