--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -19,6 +19,7 @@
   "add_message_q": "Lisää viesti?",
   "add_note_to_self_q": "Lisää viesti itselle?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Lisää useita vastaanottajia CSV: llä",
   "add_recipient_to_contacts_q": "Lisää vastaanottaja yhteystietoihin?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Lisää ryhmään",
@@ -774,7 +775,7 @@
   "request_processing_time": "Pyydä käsittelyaikaa",
   "returning_user_q": "Vanha käyttäjä?",
   "reward_recipient": "Palkinnon saaja",
-  "same_out": "Same Amount",
+  "same_out": "Sama määrä",
   "scoop_num": "Scoop-numero",
   "search_aliases": "Hae aliasta...",
   "search_assets": "Etsi arvopaperia...",
