--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Ajouter un message ?",
   "add_note_to_self_q": "Ajouter une note personnelle ?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Ajout de plusieurs destinataires par CSV",
   "add_recipient_to_contacts_q": "Ajouter le destinataire aux contacts ?",
   "add_sender_as_contact": "Ajouter l'expéditeur comme Contact",
   "add_to_group": "Ajouter au groupe",
@@ -774,7 +775,7 @@
   "request_processing_time": "Temps de traitement de la demande",
   "returning_user_q": "Déjà inscrit ?",
   "reward_recipient": "Récipiendaire de la récompense",
-  "same_out": "Same Amount",
+  "same_out": "Même quantité",
   "scoop_num": "Numéro de Scoop",
   "search_aliases": "Rechercher un alias...",
   "search_assets": "Rechercher des actifs...",
