--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -19,6 +19,7 @@
   "add_message_q": "¿Engadir unha mensaxe?",
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Engadindo varios destinatarios por CSV",
   "add_recipient_to_contacts_q": "¿Engadir destinatario a contactos?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Engadir a grupo",
@@ -774,7 +775,7 @@
   "request_processing_time": "Tempo de procesamento de solicitudes",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Destinatario de recompensa",
-  "same_out": "Same Amount",
+  "same_out": "Mesmo importe",
   "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de activos...",
