--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -19,6 +19,7 @@
   "add_message_q": "एक संदेश जोड़ें?",
   "add_note_to_self_q": "अपने लिए नोट जोड़ें?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "CSV द्वारा कई प्राप्तकर्ताओं को जोड़ना",
   "add_recipient_to_contacts_q": "प्राप्तकर्ता को संपर्कों में जोड़ें?",
   "add_sender_as_contact": "भेजने वाले को सम्पर्क के रूप में जोड़ें",
   "add_to_group": "समूह में जोड़ें",
@@ -774,7 +775,7 @@
   "request_processing_time": "प्रसंस्करण समय का अनुरोध करें",
   "returning_user_q": "वापिस आये उपयोगकर्ता (यूजर)?",
   "reward_recipient": "इनाम देने वाला",
-  "same_out": "Same Amount",
+  "same_out": "समान राशि",
   "scoop_num": "स्कूप नंबर",
   "search_aliases": "खोजें उपनाम...",
   "search_assets": "खोज परिसंपत्तियां...",
