--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Dodaj poruku?",
   "add_note_to_self_q": "Dodajte poruku za sebe?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Dodavanje više primatelja od strane CSV-a",
   "add_recipient_to_contacts_q": "Dodaj primatelja u kontakte?",
   "add_sender_as_contact": "Dodajte Pošiljaoca u Kontakte",
   "add_to_group": "Dodaj u grupu",
@@ -774,7 +775,7 @@
   "request_processing_time": "Zahtjev za obradu vremena",
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Nagrađeni primatelj",
-  "same_out": "Same Amount",
+  "same_out": "Isti iznos",
   "scoop_num": "Broj Scoop",
   "search_aliases": "Traži pseudonime...",
   "search_assets": "Traži Assete...",
