--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -19,6 +19,7 @@
   "add_message_q": "Tambahkan pesan?",
   "add_note_to_self_q": "Tambahkan catatan untuk diri sendiri?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Menambahkan beberapa penerima dengan CSV",
   "add_recipient_to_contacts_q": "Menambahkan penerima ke kontak?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Tambahkan ke Grup",
@@ -774,7 +775,7 @@
   "request_processing_time": "Permintaan Waktu Pemrosesan",
   "returning_user_q": "Kembali pengguna?",
   "reward_recipient": "Penerima Hadiah",
-  "same_out": "Same Amount",
+  "same_out": "Sama banyak",
   "scoop_num": "Jumlah sendok",
   "search_aliases": "Alias Cari...",
   "search_assets": "Cari Aset...",
