--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -19,6 +19,7 @@
   "add_message_q": "Aggiungi un messaggio?",
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Aggiunta di più destinatari per CSV",
   "add_recipient_to_contacts_q": "Aggiungi destinatario ai contatti?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Aggiungi al gruppo",
@@ -774,7 +775,7 @@
   "request_processing_time": "Richiedi tempo di elaborazione",
   "returning_user_q": "Utente già registrato?",
   "reward_recipient": "Ricompensa",
-  "same_out": "Same Amount",
+  "same_out": "La stessa quantità",
   "scoop_num": "Numero del mestolo",
   "search_aliases": "Ricerca alias...",
   "search_assets": "Ricerca Asset...",
