--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -19,6 +19,7 @@
   "add_message_q": "メッセージを追加しますか？",
   "add_note_to_self_q": "自分へのメモを追加しますか。",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "CSVによる複数の受信者の追加",
   "add_recipient_to_contacts_q": "受信者を連絡先に追加しますか？",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "グループに追加",
@@ -774,7 +775,7 @@
   "request_processing_time": "リクエスト処理時間",
   "returning_user_q": "以前ご利用になられたユーザーですか",
   "reward_recipient": "報酬受取人",
-  "same_out": "Same Amount",
+  "same_out": "同額",
   "scoop_num": "スクープ番号",
   "search_aliases": "エイリアスを検索",
   "search_assets": "資産を検索",
