--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -19,6 +19,7 @@
   "add_message_q": "Pridėti žinutę?",
   "add_note_to_self_q": "Pridėti pastabą sau?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Kelių gavėjų įtraukimas naudojant CSV",
   "add_recipient_to_contacts_q": "Įtraukti gavėją į kontaktus?",
   "add_sender_as_contact": "Įtraukti Siuntėją į kontaktus",
   "add_to_group": "Įtraukti į grupę",
@@ -774,7 +775,7 @@
   "request_processing_time": "Prašyti apdorojimo laiko",
   "returning_user_q": "Esamas vartotojas?",
   "reward_recipient": "Atlygis Gavėjas",
-  "same_out": "Same Amount",
+  "same_out": "Ta pati suma",
   "scoop_num": "Scoop skaičius",
   "search_aliases": "Ieškoti pseudonimų...",
   "search_assets": "Ieškoti aktyvų...",
