--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -19,6 +19,7 @@
   "add_message_q": "Een bericht toevoegen?",
   "add_note_to_self_q": "Eigen notitie toevoegen?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Meerdere ontvangers toevoegen via CSV",
   "add_recipient_to_contacts_q": "Ontvanger toevoegen aan contactpersonen?",
   "add_sender_as_contact": "Afzender toevoegen als contactpersoon",
   "add_to_group": "Toevoegen aan groep",
@@ -774,7 +775,7 @@
   "request_processing_time": "Verzoek om verwerkingstijd",
   "returning_user_q": "Terugkerende Gebruiker?",
   "reward_recipient": "Beloning Ontvanger",
-  "same_out": "Same Amount",
+  "same_out": "Zelfde hoeveelheid",
   "scoop_num": "Scoop nummer",
   "search_aliases": "Zoek Aliassen...",
   "search_assets": "Zoek Asset...",
