--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -19,6 +19,7 @@
   "add_message_q": "Chcesz dodać wiadomość?",
   "add_note_to_self_q": "Chcesz dodać notatkę dla siebie?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Dodanie wielu odbiorców przez CSV",
   "add_recipient_to_contacts_q": "Chcesz dodać odbiorcę do kontaktów?",
   "add_sender_as_contact": "Dodaj nadawcę do kontaktów",
   "add_to_group": "Dodaj do grupy",
@@ -783,7 +784,7 @@
   "request_processing_time": "Żądaj czasu przetwarzania",
   "returning_user_q": "Powracający użytkownik?",
   "reward_recipient": "Odbiorca nagrody",
-  "same_out": "Ta sama ilość",
+  "same_out": "Taka sama ilość",
   "scoop_num": "Numer miarki",
   "search_aliases": "Szukaj Aliasu...",
   "search_assets": "Szukaj Aktywa...",
