--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -19,6 +19,7 @@
   "add_message_q": "Adicionar uma Mensagem?",
   "add_note_to_self_q": "Adicionar uma Nota Pessoal?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Adicionando vários destinatários por CSV",
   "add_recipient_to_contacts_q": "Adicionar o destinatário para contatos?",
   "add_sender_as_contact": "Adicionar remetente como contato",
   "add_to_group": "Adicionar a Grupo",
@@ -774,7 +775,7 @@
   "request_processing_time": "Solicitar Tempo de Processamento",
   "returning_user_q": "Usuário Existente?",
   "reward_recipient": "Destinatário da recompensa",
-  "same_out": "Same Amount",
+  "same_out": "Mesma quantidade",
   "scoop_num": "Número de colher",
   "search_aliases": "Pesquisa de Aliases...",
   "search_assets": "Pesquisa de Ativos...",
