--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -19,6 +19,7 @@
   "add_message_q": "Doriți sa adăugați un mesaj?",
   "add_note_to_self_q": "Doriți sa adăugați o notiță?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Adăugarea mai multor destinatari de către CSV",
   "add_recipient_to_contacts_q": "Doriți să adăugați destinatarul la contacte?",
   "add_sender_as_contact": "Adăugați expeditorul la contacte",
   "add_to_group": "Adăugați la grup",
@@ -774,7 +775,7 @@
   "request_processing_time": "Cereți timpul de procesare",
   "returning_user_q": "Deja înregistrat?",
   "reward_recipient": "Recipient Recompensă",
-  "same_out": "Same Amount",
+  "same_out": "Aceeasi suma",
   "scoop_num": "Numărul de bucăți",
   "search_aliases": "Căutare alias-uri...",
   "search_assets": "Căutare Active...",
