--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -19,6 +19,7 @@
   "add_message_q": "Добавить сообщение?",
   "add_note_to_self_q": "Добавить заметку для себя? ",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Добавление нескольких получателей по CSV",
   "add_recipient_to_contacts_q": "Добавить получателя в список контактов?",
   "add_sender_as_contact": "Добавить отправителя в контакты",
   "add_to_group": "Добавить в Группу",
@@ -774,7 +775,7 @@
   "request_processing_time": "Время обработки запроса",
   "returning_user_q": "Зарегистрированный пользователь?",
   "reward_recipient": "Получатель вознаграждения",
-  "same_out": "Same Amount",
+  "same_out": "Такое же количество",
   "scoop_num": "Номер совка",
   "search_aliases": "Поиск Псевдонимов...",
   "search_assets": "Поиск активов...",
