--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -19,6 +19,7 @@
   "add_message_q": "Dodaj poruku?",
   "add_note_to_self_q": "Dodajte poruku za sebe?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "",
   "add_recipient_to_contacts_q": "Dodaj primatelja u kontakte?",
   "add_sender_as_contact": "Dodajte Pošiljaoca u Kontakte",
   "add_to_group": "Dodaj u grupu",
