--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -19,6 +19,7 @@
   "add_message_q": "Pridať správu?",
   "add_note_to_self_q": "Pridať poznámku pre seba?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Pridanie viacerých príjemcov pomocou CSV",
   "add_recipient_to_contacts_q": "Pridať príjemcu medzi kontakty?",
   "add_sender_as_contact": "Pridať odosielateľa do kontaktov",
   "add_to_group": "Pridať do skupiny",
@@ -774,7 +775,7 @@
   "request_processing_time": "Čas spracovania požiadavky",
   "returning_user_q": "Opätovný používateľ?",
   "reward_recipient": "Príjemca odmeny",
-  "same_out": "Same Amount",
+  "same_out": "Rovnaké množstvo",
   "scoop_num": "Scoop Number",
   "search_aliases": "Hľadať aliasy...",
   "search_assets": "Hľadať majetok...",
