--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -19,6 +19,7 @@
   "add_message_q": "Dodajte Poruku?",
   "add_note_to_self_q": "Dodajte poruku za sebe?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Додавање више прималаца од стране ЦСВ-а",
   "add_recipient_to_contacts_q": "Dodati primaoca u kontakte?",
   "add_sender_as_contact": "Dodajte Pošiljaoca u Kontakte",
   "add_to_group": "Dodajte u Grupu",
@@ -721,7 +722,7 @@
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
   "returning_user_q": "Korisnik Povratnik?",
-  "same_out": "Same Amount",
+  "same_out": "Исти износ",
   "search_aliases": "Tražite Alias-e...",
   "search_assets": "Pretraži Asset-e...",
   "search_by_id": "Tražite po ID-u...",
