--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Додајте Поруку?",
   "add_note_to_self_q": "Додајте поруку за себе?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Додавање више прималаца од стране ЦСВ-а",
   "add_recipient_to_contacts_q": "Додати примаоца у контакте?",
   "add_sender_as_contact": "Додајте Пошиљаоца у Контакте",
   "add_to_group": "Додајте у Групу",
@@ -774,7 +775,7 @@
   "request_processing_time": "Рекуест Процессинг Тиме",
   "returning_user_q": "Корисник Повратник?",
   "reward_recipient": "Ревард Реципиент",
-  "same_out": "Same Amount",
+  "same_out": "Исти износ",
   "scoop_num": "Сцооп Нумбер",
   "search_aliases": "Тражите Алиас-е...",
   "search_assets": "Претражи Асcет-е...",
