--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Mesaj Ekle?",
   "add_note_to_self_q": "Kendine bir Not Ekle?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "CSV ile birden fazla alıcı ekleme",
   "add_recipient_to_contacts_q": "Alıcı kişiyi hesaba Ekle?",
   "add_sender_as_contact": "Gönderen kişiyi Hesaba Ekle",
   "add_to_group": "Gruba Ekle",
@@ -774,7 +775,7 @@
   "request_processing_time": "İşlem Süresi İste",
   "returning_user_q": "Returning User?",
   "reward_recipient": "Ödül Alıcısı",
-  "same_out": "Same Amount",
+  "same_out": "Aynı Tutar",
   "scoop_num": "Kepçe Numarası",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
