--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -19,6 +19,7 @@
   "add_message_q": "Додати повідомлення?",
   "add_note_to_self_q": "Додати замітку для себе ? ",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Додавання кількох одержувачів CSV",
   "add_recipient_to_contacts_q": "Додати одержувача в список контактів?",
   "add_sender_as_contact": "Додати посилача в контакти",
   "add_to_group": "Додати до групи",
@@ -774,7 +775,7 @@
   "request_processing_time": "Час обробки запиту",
   "returning_user_q": "Зареєстрований Користувач?",
   "reward_recipient": "Одержувач нагороди",
-  "same_out": "Same Amount",
+  "same_out": "Така ж сума",
   "scoop_num": "Номер Scoop",
   "search_aliases": "Пошук Аліасiв...",
   "search_assets": "Пошук активів...",
