--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -19,6 +19,7 @@
   "add_message_q": "添加一条信息？",
   "add_note_to_self_q": "添加自我提醒？",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "按CSV添加多个收件人",
   "add_recipient_to_contacts_q": "添加接收者到联系人？",
   "add_sender_as_contact": "将发送者添加为联系人",
   "add_to_group": "添加到群组",
@@ -774,7 +775,7 @@
   "request_processing_time": "请求处理时间",
   "returning_user_q": "返回的用户？",
   "reward_recipient": "奖励收件人",
-  "same_out": "Same Amount",
+  "same_out": "相同数量",
   "scoop_num": "铲号",
   "search_aliases": "搜索别名...",
   "search_assets": "搜索资产...",
