feat(send): add support for hex messages to send burst form

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Ако загубите пропуск, няма да можете да извършвате никакви транзакции, т.е. монетите ви са изгубени. Кодовата фраза не може да бъде възстановена. Запазете тази секретна парола. Всеки, който знае паролата, е de facto собственикът на профила.",
   "message": "Съобщение",
   "message_empty": "Съобщението е празно.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Това съобщение е шифровано.",
   "message_is_not_encrypted": "Това съобщение не е шифровано.",
   "messages": "Съобщения",
