--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Εάν χάσετε τη φράση πρόσβασης, δεν θα μπορείτε να πραγματοποιήσετε συναλλαγές, δηλαδή τα νομίσματά σας χάνονται. Η φράση πρόσβασης δεν είναι ανακτήσιμη. Διατηρήστε αυτή τη φράση μυστικότητας. Όλοι όσοι γνωρίζουν τη φράση πρόσβασης είναι de facto ο κάτοχος του λογαριασμού.",
   "message": "Μήνυμα",
   "message_empty": "Το μήνυμα είναι κενό.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Αυτό το μήνυμα είναι κρυπτογραφημένο.",
   "message_is_not_encrypted": "Αυτό το μήνυμα δεν είναι κρυπτογραφημένα.",
   "messages": "Μηνύματα",
