--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Если вы потеряете парольную фразу, вы не сможете совершать никаких транзакций, то есть ваши монеты будут потеряны. Пароль не подлежит восстановлению. Держите эту секретную фразу в секрете. Каждый, кто знает парольную фразу, де-факто является владельцем учетной записи.",
   "message": "Сообщение",
   "message_empty": "Пустое сообщение.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Это сообщение зашифровано.",
   "message_is_not_encrypted": "Это сообщение не зашифровано.",
   "messages": "Сообщения",
