--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Ако изгубите лозинку, нећете моћи да обавите ниједну трансакцију, тј. Изгубљени кованице. Лозинка није надокнадива. Чувајте тајну ове лозинке. Сви који знају запор су де фацто власници рачуна.",
   "message": "Порука",
   "message_empty": "Порука је празна.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Ова порука је заштићена.",
   "message_is_not_encrypted": "Ова порука није заштићена.",
   "messages": "Поруке",
