--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Якщо ви втратите пароль, ви не зможете робити будь-які транзакції, тобто монети втрачені. Парольна фраза не відновлюється. Зберігайте цю секретну фразу. Кожен, хто знає пароль, фактично є власником облікового запису.",
   "message": "Повідомлення",
   "message_empty": "Порожнє повідомлення.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Це повідомлення зашифровано.",
   "message_is_not_encrypted": "Це повідомлення не зашифроване.",
   "messages": "Повідомлення",
