--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Als u de wachtwoordzin verliest, kunt u geen transacties uitvoeren, dat wil zeggen dat uw munten verloren zijn. De wachtwoordzin kan niet worden hersteld. Houd deze wachtwoordzin geheim. Iedereen die de wachtwoordzin kent, is de eigenaar van het account.",
   "message": "Bericht",
   "message_empty": "Het bericht is leeg.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Dit bericht is versleuteld.",
   "message_is_not_encrypted": "Dit bericht is niet versleuteld.",
   "messages": "Berichten",
