--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Dacă pierdeți fraza de acces, nu veți putea efectua nicio tranzacție, adică monedele dvs. se pierd. Fraza de acces nu poate fi recuperată. Mențineți această parolă secretă. Toată lumea care cunoaște expresia de acces este de facto proprietarul contului.",
   "message": "Mesaj",
   "message_empty": "Mesajul este gol.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Acest mesaj este criptat.",
   "message_is_not_encrypted": "Acest mesaj nu este criptat.",
   "messages": "Mesaje",
