--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -566,6 +566,7 @@
   "memorize_passphrase_help_addon": "Ak stratíte prístupovú frázu, nebudete môcť vykonávať žiadne transakcie, t. J. Vaše mince sa stratia. Prístupová fráza sa nedá obnoviť. Udržujte toto heslo v tajnosti. Každý, kto pozná heslo, je de facto vlastníkom účtu.",
   "message": "Správa",
   "message_empty": "Správa je prázdna.",
+  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Táto správa je zašifrovaná.",
   "message_is_not_encrypted": "Táto správa nie je zašifrovaná.",
   "messages": "Správy",
